# foundry-test1

./: .env.sample  .gitmodules  LICENSE  README.md  pyproject.toml
client/app/: contract.py  main.py
contract/script/: Deploy.s.sol
contract/src/: SampleNFT.sol  SampleNFT1.sol  SampleNFT2.sol
contract/test/: SampleNFT.t.sol
